tests/baselines/reference/recursiveIdenticalAssignment.errors.txt
tests/cases/compiler/recursiveIdenticalAssignment.ts(5,13): error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
tests/cases/compiler/recursiveIdenticalAssignment.ts(5,23): error TS2464: Illegal reference B in constraint.


==== tests/cases/compiler/recursiveIdenticalAssignment.ts (2 errors) ====
    interface A<T> {
        x: A<T>
    }
    
    interface B<T extends B<B<T>>> { // error, constraint referencing itself
                ~~~~~~~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                          ~~~~~~~
!!! error TS2464: Illegal reference B in constraint.
        x: B<T>
    }
    
    var a: A<A<any>>
    var b: B<B<any>> = a // Error, any does not satisfy constraint B<B<T>>
    